--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "recharts": "^3.6.0",
+    "@google/genai": "^1.37.0",
     "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
-    "@google/genai": "^1.35.0"
+    "lucide-react": "^0.562.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
